--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             </div>
         </article>
     </main>
+    <section class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://www.frontendmentor.io/profile/mdrizwanfk" target="_blank">mdrizwanfk</a>.
+    </section>
     <script type="module" src="/main.js"></script>
 </body>
 </html>
